--- a/archivoChaos.html
+++ b/archivoChaos.html
@@ -16,6 +16,6 @@
 <body>
     Holaaaaaaaaaaaaaaaaaaaaaaaaaaaa chaos
 </body>
-buenaaaaaaaaaaaaaaaaaaaaaaa
+buenaaaaaaaaaaaaaaaaaaaaaaa lo que pasa es que me pasa eso que me paso brigido, SIIIIIIIIIUUUUUUUUU
 
 </html>
