--- a/Registro/registroApoderado.html
+++ b/Registro/registroApoderado.html
@@ -28,7 +28,7 @@
 
 <body>
     <section class="registro">
-        <h1>Registro Apoderado</h1>
+        <h1 align="center">Registro Profesor</h1>
         <p>Nombres</p>
         <input type="text" name="nombres" id="nombres" placeholder="Ingrese sus nombres">
         <br>
@@ -51,7 +51,10 @@
         <input type="password" name="reingresoClave" id="reingreoClave" placeholder="Reingrese su clave">
         <br>
         <br>
-        <input type="submit" value="Registrarse">
+        <div align="center">
+
+            <input type="submit" value="Registrarse">
+        </div>
 
     </section>
 </body>
