--- a/Frontend/pages/registro.html
+++ b/Frontend/pages/registro.html
@@ -18,7 +18,7 @@
         <!--banner?-->
         <div class="nompag">
             <a class="aimg" href="../index.html">
-                <img class="img" src="../public/pixil-frame-0 (3).png" alt="neko">
+                <img class="img" src="../disenio/TAMA-LGTBL.png" alt="TAMA">
             </a>
             <h1>Kids D&D</h1>
         </div>
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <!--Cuerpo de pagina-->
-    <main>
+    <main class="regis">
         <h1 class="reg">¿Quién eres?</h1>
         <section class="registro1">
             <div class="est">
@@ -65,7 +65,7 @@
                 <a href="padres.html"><img class="img-padre" src="../public/link.jpg" alt="padre"></a>
             </div> -->
         </section>
-    </main>
+    
     <!--pie de pagina-->
     <footer>
         <img class="GN" src="../public/generation.png" alt="generation">
@@ -75,7 +75,7 @@
             <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
         </div>
     </footer>
-
+</main>
 </body>
 
 </html>
