--- a/Frontend/pages/contacto.html
+++ b/Frontend/pages/contacto.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -18,7 +19,7 @@
         <!--banner?-->
         <div class="nompag">
             <a class="aimg" href="../index.html">
-                <img class="img" src="../public/pixil-frame-0 (3).png" alt="neko">
+                <img class="img" src="../disenio/TAMA-LGTBL.png" alt="TAMA">
             </a>
             <h1>Kids D&D</h1>
         </div>
@@ -47,35 +48,31 @@
         </nav>
     </header>
     <main>
-        <div class="tabla">
+
+        <section class="wah"> 
             <h1 class="contact">Contacto</h1>
             <br>
-            <table>
-                <thead>
-                    <tr> ¡Nos puedes contactar a traves de nuestras distintas
-                        <span class="rs">
-                            Redes sociales!
-                        </span>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <a href="https://www.instagram.com"><img src="../public/ig.png" alt="ig"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <a href="https://www.Facebook.com"><img src="../public/fb.png" alt="fb"></a>
-                        </td>
-                    </tr>
-                    <!--Agregar formato  correo-->>
-                    <tr>
-                        <td> Correo@correo.com</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+            <div class="coreo">
+                <form action=”mailto:contact@yourdomain.com” method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
+                    <span>
+                        Nombre:
+                    </span>
+                    <br>
+                    <input type=”text” size=”19″ name=”ContactName”>
+                    <br>
+                    <br>
+                    <span>
+                        Mensaje:
+                    </span>
+                    <br>
+                    <textarea name=”ContactCommentt” rows=”6″ cols=”20″></textarea>
+                    <br>
+                    <button type=”submit” value=”Submit”> Enviar</button>
+                </form>
+            </div>
+            
+        </section>
+        
     </main>
     <!--pie de pagina-->
     <footer>
