Cambios front end

--- a/Front End/Frontend/pages/registro.html
+++ b/Front End/Frontend/pages/registro.html
@@ -84,6 +84,8 @@ text-align: center  ;
     
 }
 
+
+
 </style>
 </head>
 
@@ -151,12 +153,13 @@ text-align: center  ;
                         <input id="btn1" type="submit" value="Registrarse">
                     </div>
                     <div class="columna2 col text-dark" style ="border: 1px solid red;">
-                        <div class="btn-selector row">
-                            <div class="col-4" style="display: inline-block;">Alumno</div>
-                            <div class="col-4" style="display: inline-block;">Padre</div>
-                            <div class="col" style="display: inline-block;">Profesor</div>
+                     <div class="btn-selector">
+                          <div class="btn-group" role="group" aria-label="Basic example">
+                            <button type="button" class="btn btn-secondary" style = "font-size: 1px;" >Left</button>
+                            <button type="button" class="btn btn-secondary" style = "font-size: 1px;">Middle</button>
+                            <button type="button" class="btn btn-secondary" style = "font-size: 1px;">Right</button>
+                          </div>
                         </div>
-                    </div>
                     </div>
     </div>
     </div>
