--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -24,13 +24,13 @@
                 <img class="img" src="disenio/TAMA-LGTBL.png" alt="neko">
             </a>
             <div class="kd">
-                <h1 class="k">K</h1>
-                <h1 class="i">i</h1>
-                <h1 class="d">d</h1>
-                <h1 class="s">s</h1>
-                <h1 class="D1">D</h1>
-                <h1 class="y">&</h1>
-                <h1 class="D2">D</h1>
+            <!--   <img class= "b"src="./disenio/imagen logo semillita/SEM.png" alt="">
+                <img class= "k"src="./disenio/i.png" alt="">
+                <img class= "a"src="./disenio/imagen logo semillita/LL.png" alt="">
+                <img class= "k"src="./disenio/I.png" alt="">-->
+                <img class= "b"src="./disenio/Semilli.png" alt="">
+                <img  class = "c"src="./disenio/Semilla.png" alt="">
+                <img class= "a"src="./disenio/A.png" alt="">
             </div>
         </div>
         <!--navbar-->
