--- a/Frontend/pages/contacto.html
+++ b/Frontend/pages/contacto.html
@@ -21,7 +21,7 @@
             <a class="aimg" href="../index.html">
                 <img class="img" src="../disenio/TAMA-LGTBL.png" alt="TAMA">
             </a>
-            <h1>Kids D&D</h1>
+            <h1>Semilla</h1>
         </div>
         <!--navbar-->
         <nav class="navv">
