front end actualizado

--- a/FRONTENDALONDRA/Frontend/pages/contenidos.html
+++ b/FRONTENDALONDRA/Frontend/pages/contenidos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMILLITA - CONTENIDO</title>
+    <title>SEMILLITA - CONTENIDOS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -57,32 +57,36 @@
     <!--Cuerpo de pagina-->
     <main>
         <div class="container">
+                <div class="contenidos">
+                    <h4 class="subtitulo">1. HTML: Tus primeros pasos - Aprende lo inicial.</h4>
+                </div>
             <div class="h4center">
-                <h4 class="nivel1 justify-content-center">SELECCIONA UN CONTENIDO</h4>
-                <h5 class="nivel1 justify-content">A medida que vayas superando niveles, nuevos contenidos te esperan.</h5>
+                <h4 class="cont1 justify-content-center">COMENZANDO CON HTML DESDE CERO</h4>
+                <h5 class="descCont">A medida que vayas superando distintos niveles y juegos, nuevos contenidos te esperan, ¡sigue adelante!</h5>
             </div>
-            <a href="iniciarSesion.html">
-                <div class="box1 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 1</h6>
+            <a href="etapas.html">
+                <div class="boxContA container">
+                    <div class="boxCont1 container">
+                        <h6 class="nivelFont">DIFERENTES TIPOS DE TAGS HTML</h6>
                     </div>
                 </div>
             </a>
             <div>
                 <div class="h4center">
-                    <h4 class="nivel2 justify-content-center">ARRASTRA Y SUELTA</h4>
+                    <h4 class="cont1 justify-content-center">LA ESTRUCTURA DEL HTML</h4>
+                    <h5 class="descCont">A medida que vayas superando distintos niveles y juegos, nuevos contenidos te esperan, ¡sigue adelante!</h5>
                 </div>
             </div>
             <a href="iniciarSesion.html">
-                <div class="box2 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 2</h6>
+                <div class="boxContB container">
+                    <div class="boxCont1 container">
+                        <h6 class="nivelFont">CÓMO COMENZAR CON TU VISTA HTML</h6>
                     </div>
                 </div>
             </a>
             <div>
                 <div class="h5center">
-                    <h4 class="nivel3 justify-content-center">MÁS NIVELES POR VENIR</h4>
+                    <h4 class="nivel3 justify-content-center">MÁS CONTENIDO PRONTO</h4>
                 </div>
             </div>
                 <div class="box3 container">
