--- a/FRONTENDALONDRA/Frontend/pages/modulos.html
+++ b/FRONTENDALONDRA/Frontend/pages/modulos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMILLITA - ETAPAS</title>
+    <title>SEMILLITA - MODULOS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -62,35 +62,22 @@
     <main>
         <div class="container">
             <div class="contenidos">
-                <h4 class="subtitulo">1. HTML: Tus primeros pasos - Supera los niveles.</h4>
+                <h4 class="subtitulo">MÓDULOS HTML</h4>
             </div>
             <div class="h4center">
-                <h4 class="nivel1 justify-content-center">ATRAPA LOS "TAGS HTML"</h4>
-                <h5 class="descCont">¡Intenta atrapar las etiquetas que caen desde el cielo!</h5>
+                <h4 class="nivel1 justify-content-center">Módulo 1 - Primeros pasos</h4>
+                <h5 class="descCont">A medida que avances, nuevos módulos se agregarán a tu ruta.</h5>
             </div>
-            <a href="iniciarSesion.html">
-                <div class="box1 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 1</h6>
-                    </div>
-                </div>
-            </a>
-            <div>
-                <div class="h4center">
-                    <h4 class="nivel2 justify-content-center">ARRASTRA Y SUELTA</h4>
-                    <h5 class="descCont">¿Correcto o incorrecto? Arrastra y suelta las opciones según lo que has aprendido.</h5>
-                </div>
-            </div>
-            <a href="iniciarSesion.html">
-                <div class="box2 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 2</h6>
+            <a href="contenidos.html">
+                <div class="boxContC container">
+                    <div class="boxCont1 container">
+                        <h6 class="nivelFont">HTML básico 1</h6>
                     </div>
                 </div>
             </a>
             <div>
                 <div class="h5center">
-                    <h4 class="nivel3 justify-content-center">MÁS NIVELES POR VENIR</h4>
+                    <h4 class="nivel3 justify-content-center">VUELVE MÁS TARDE</h4>
                 </div>
             </div>
                 <div class="box3 container">
