--- a/FRONTENDALONDRA/Frontend/pages/preguntas.html
+++ b/FRONTENDALONDRA/Frontend/pages/preguntas.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+<!-- VISTA PREGUNTA NO SE HA TOCADO AUN-->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
