--- a/Front End/Frontend/pages/asignaturas.html
+++ b/Front End/Frontend/pages/asignaturas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMILLITA - CONTACTO</title>
+    <title>SEMILLITA - ASIGNATURAS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -28,9 +28,13 @@
                 <img class= "k"src="./disenio/I.png" alt="">-->
                 <img class="b" src="../disenio/Semilli.png" alt="semilli">
                 <img class="c" src="../disenio/Semilla.png" alt="semilla">
-                <img class="a" src="../disenio/A.png" alt="a">           
-            </div>           
+                <img class="a" src="../disenio/A.png" alt="a">
+            </div>
         </div>
+        <!--
+        <div>
+            <img class="floor" src="../disenio/pared2.png" alt="paredBloque">/>
+        </div>-->
         <!--navbar-->
         <nav class="navv">
             <ul class="nav justify-content-center">
@@ -52,38 +56,43 @@
             </ul>
         </nav>
     </header>
+    <!--Cuerpo de pagina-->
     <main>
-
-        <section class="wah"> 
-            <h3 class="subtitulo">Envíanos tu mensaje</h3>
-            <br>
-            <div class="correo" id="form1" align="center">
-                <form action=”mailto:contact@yourdomain.com” method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
-                    <span>
-                        Nombre:
-                    </span>
-                    <br>
-                    <br>
-                    <input type=”text” size=”19″ name=”ContactName”>
-                    <br>
-                    <br>
-                    <span>
-                        Mensaje:
-                    </span>
-                    <br>
-                    <br>
-                    <textarea name=”ContactCommentt” rows=”6″ cols=”20″></textarea>
-                    <br>
-                    <br>
-                    <!--CHECAR PROBLEMA NO RE DIRECCIONA-->
-                    <a href="iniciarSesion.html">
-                    <button type=”submit” value=”Submit” id="send"> Enviar</button>
-                    </a>
-                </form>
+        <div class="container">
+            <div class="contenidos">
+                <h4 class="subtitulo">HTML</h4>
             </div>
-            
-        </section>
-        
+            <div class="h4center">
+                <h4 class="nivel1 justify-content-center">HTML5</h4>
+                <h5 class="descCont">Explora el comienzo del mundo de programar.</h5>
+            </div>
+            <a href="modulos.html">
+                <div class="boxContC container">
+                    <div class="boxCont1 container">
+                        <h6 class="nivelFont">Hola mundo</h6>
+                    </div>
+                </div>
+            </a>
+            <div>
+                <div class="h5center">
+                    <h4 class="nivel3 justify-content-center">VUELVE MÁS TARDE</h4>
+                </div>
+            </div>
+            <div class="box3 container">
+                <div class="boxSoon container">
+                    <p id="proximamente">Próximamente</p>
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     </main>
     <!--pie de pagina-->
     <footer>
@@ -92,6 +101,7 @@
             <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
             <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
             <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
+            <br> Generation 2022
         </div>
     </footer>
 </body>
