--- a/Front End/Frontend/index.html
+++ b/Front End/Frontend/index.html
@@ -21,7 +21,7 @@
         <!--banner?-->
         <div class="nompag">
             <a class="aimg" href="index.html">
-                <img class="img" src="public/pixil-frame-0 (3).png" alt="neko">
+                <img class="img" src="disenio/TAMA-LGTBL.png" alt="neko">
             </a>
             <div class="kd">
                 <h1 class="k">K</h1>
@@ -40,7 +40,7 @@
                     <a class="nav-link active" aria-current="page" href="">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/Nosotros.html"> ¿Quienes somos?</a>
+                    <a class="nav-link" href="pages/nosotros.html"> ¿Quienes somos?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -67,11 +67,11 @@
     </main>
     <!--Pie de pagina-->
     <footer>
-        <div class="foot">
-            <a href="https://www.instagram.com"><img class="img-ig" src="public/ig.png" alt="ig"></a>
-            <a href="https://www.Facebook.com"><img class="img-fb" src="public/fb.png" alt="fb"></a>
-            <a href="https://twitter.com"><img class="img-tw " src="public/tw.png" alt="tw"></a>
-            <br> Generation 2022
+        <img class="GN" src="disenio/generation.png" alt="generation">
+        <div class="RS">
+            <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
+            <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
+            <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
         </div>
     </footer>
 
