--- a/Front End/Frontend/pages/deshusoporahora/index.html
+++ b/Front End/Frontend/pages/deshusoporahora/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMILLITA - CONTACTO</title>
+    <title>Kids D&D</title>
+    <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!--css-->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -28,8 +30,10 @@
                 <img class= "k"src="./disenio/I.png" alt="">-->
                 <img class="b" src="../disenio/Semilli.png" alt="semilli">
                 <img class="c" src="../disenio/Semilla.png" alt="semilla">
-                <img class="a" src="../disenio/A.png" alt="a">           
-            </div>           
+                <img class="a" src="../disenio/A.png" alt="a">
+            </div>
+
+
         </div>
         <!--navbar-->
         <nav class="navv">
@@ -52,48 +56,24 @@
             </ul>
         </nav>
     </header>
+    <!--Cuerpo de pagina-->
     <main>
+        <section>
 
-        <section class="wah"> 
-            <h3 class="subtitulo">Envíanos tu mensaje</h3>
-            <br>
-            <div class="correo" id="form1" align="center">
-                <form action=”mailto:contact@yourdomain.com” method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
-                    <span>
-                        Nombre:
-                    </span>
-                    <br>
-                    <br>
-                    <input type=”text” size=”19″ name=”ContactName”>
-                    <br>
-                    <br>
-                    <span>
-                        Mensaje:
-                    </span>
-                    <br>
-                    <br>
-                    <textarea name=”ContactCommentt” rows=”6″ cols=”20″></textarea>
-                    <br>
-                    <br>
-                    <!--CHECAR PROBLEMA NO RE DIRECCIONA-->
-                    <a href="iniciarSesion.html">
-                    <button type=”submit” value=”Submit” id="send"> Enviar</button>
-                    </a>
-                </form>
-            </div>
-            
         </section>
-        
+
+
     </main>
-    <!--pie de pagina-->
+    <!--Pie de pagina-->
     <footer>
-        <img class="GN" src="../public/generation.png" alt="generation">
+        <img class="GN" src="disenio/generation.png" alt="generation">
         <div class="RS">
             <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
             <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
             <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
         </div>
     </footer>
+
 </body>
 
 </html>
