--- a/Front End/Frontend/pages/iniciarSesion.html
+++ b/Front End/Frontend/pages/iniciarSesion.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kids D&D</title>
+    <title>SEMILLITA - APRENDE CODIGO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -18,13 +19,21 @@
         <!--banner?-->
         <div class="nompag">
             <a class="aimg" href="../index.html">
-                <img class="img" src="../public/pixil-frame-0 (3).png" alt="neko">
+                <img class="img" src="../disenio/TAMA-YLLW.png" alt="tamago">
             </a>
-            <h1>Kids D&D</h1>
+            <div class="kd">
+                <!-- <img class= "b"src="./disenio/imagen logo semillita/SEM.png" alt="">
+                <img class= "k"src="./disenio/i.png" alt="">
+                <img class= "a"src="./disenio/imagen logo semillita/LL.png" alt="">
+                <img class= "k"src="./disenio/I.png" alt="">-->
+                <img class="b" src="../disenio/Semilli.png" alt="semilli">
+                <img class="c" src="../disenio/Semilla.png" alt="semilla">
+                <img class="a" src="../disenio/A.png" alt="a">
+            </div>
         </div>
         <!--navbar-->
         <nav class="navv">
-            <ul class="nav nav-pills">
+            <ul class="nav justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                 </li>
@@ -34,13 +43,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
-            </ul>
-            <!--ver como hacer que queden en la misma linea, por ahora queda asi-->
-            <ul class="nav justify-content-end">
                 <li class="nav-item">
                     <a class="nav-link" href="registro.html">Registro</a>
                 </li>
-                <li class="nav justify-content-end">
+                <li class="nav-item">
                     <a class="nav-link active" href="iniciarSesion.html">Iniciar Sesión</a>
                 </li>
             </ul>
@@ -48,12 +54,12 @@
     </header>
     <!--Cuerpo de pagina-->
     <main>
-        <div class="container">
+        <div class="container" align="center">
             <div class="row justify-content-center ">
                 <div class="formulario">
                     <form action="">
                         <div class="form-group text-center pt-3">
-                            <h2 class="text-light">INICIAR SESIÓN</h2>
+                            <h3 class="text-light">INICIAR SESIÓN</h3>
                         </div>
                         <div class="form-group mx-sm-4 pt-3">
                             <input type="text" class="form-control" placeholder="Ingrese su Usuario">
@@ -61,15 +67,23 @@
                         <div class="form-group mx-sm-4 pb-3">
                             <input type="password" class="form-control" placeholder="Ingrese su Contraseña">
                         </div>
+                        <!--CHECAR ESTE LINK DE RE DIRECCION-->
+                        <br>
+                        <br>
                         <div class="form-group mx-sm-4 pb-2">
-                            <input type="submit" class="btn btn-block ingresar" value="INGRESAR">
+                            <span><a href="asignaturas.html" class="olvide1">INGRESAR</a></span>
+                            <!--<input type="submit" class="btn btn-block ingresar" value="INGRESAR">-->
                         </div>
+                        <br>
+                        <br>
                         <!-- <div class="form-group mx-sm-4 text-right">
                             <span class=""><a href="#" class="olvide">Olvide mi contraseña?</a></span>
                         </div>-->
                         <div class="form-group text-center">
                             <span><a href="registro.html" class="olvide1">REGISTRARSE</a></span>
                         </div>
+                        <br>
+                        <br>
                     </form>
                 </div>
             </div>
@@ -77,17 +91,26 @@
 
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 
     </main>
     <!--pie de pagina-->
     <footer>
-        <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
-        <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
-        <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
-        <br> Generation 2022
+        <img class="GN" src="../public/generation.png" alt="generation">
+        <div class="RS">
+            <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
+            <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
+            <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
+            <br> Generation 2022
+        </div>
     </footer>
 </body>
 
