--- a/FRONTEND/Frontend/pages/index.html
+++ b/FRONTEND/Frontend/pages/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMILLITA - ETAPAS</title>
+    <title>SEMILLITA - APRENDE CODIGO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -30,8 +30,6 @@
                 <img class="c" src="../disenio/Semilla.png" alt="semilla">
                 <img class="a" src="../disenio/A.png" alt="a">
             </div>
-
-            
         </div>
         <!--navbar-->
         <nav class="navv">
@@ -56,44 +54,13 @@
     </header>
     <!--Cuerpo de pagina-->
     <main>
-        <div class="container">
-            <div class="contenidos">
-                <h4 class="subtitulo">1. HTML: Tus primeros pasos - Supera los niveles.</h4>
+        <div class="container" align="center">
+            <div class="video">
+                <blockquote class="embedly-card"><h4><a href="https://www.youtube.com/watch?v=y8C361oai0w"></a></h4><p></p></blockquote>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
             </div>
-            <!-- <div class="h4center">
-                <h4 class="nivel1 justify-content-center">ATRAPA LOS "TAGS HTML"</h4>
-                <h5 class="descCont">¡Intenta atrapar las etiquetas que caen desde el cielo!</h5>
-            </div> -->
-            <a href="iniciarSesion.html">
-                <div class="box1 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 1</h6>
-                    </div>
-                </div>
-            </a>
-            <div>
-                <div class="h4center">
-                    <h4 class="nivel2 justify-content-center">ARRASTRA Y SUELTA</h4>
-                </div>
-            </div>
-            <a href="iniciarSesion.html">
-                <div class="box2 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 2</h6>
-                    </div>
-                </div>
-            </a>
-            <div>
-                <div class="h5center">
-                    <h4 class="nivel3 justify-content-center">MÁS NIVELES POR VENIR</h4>
-                </div>
-            </div>
-                <div class="box3 container">
-                    <div class="boxSoon container">
-                        <p id="proximamente">Próximamente</p>
-                    </div>
-                </div>
         </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
@@ -103,6 +70,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+
     </main>
     <!--pie de pagina-->
     <footer>
