--- a/Frontend/Frontend/pages/contacto.html
+++ b/Frontend/Frontend/pages/contacto.html
@@ -27,7 +27,7 @@
         <nav class="navv">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Nosotros.html"> ¿Quienes somos?</a>
@@ -57,6 +57,14 @@
                     <span>
                         Nombre:
                     </span>
+                    <br>
+                    <input type=”text” size=”19″ name=”ContactName”>
+                    <br>
+                    <br>
+                    <span>
+                        Correo:
+                    </span>
+                    <br>
                     <br>
                     <input type=”text” size=”19″ name=”ContactName”>
                     <br>
