--- a/FRONTEND/Frontend/pages/asignaturas.html
+++ b/FRONTEND/Frontend/pages/asignaturas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMILLITA - ETAPAS</title>
+    <title>SEMILLITA - ASIGNATURAS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -30,9 +30,11 @@
                 <img class="c" src="../disenio/Semilla.png" alt="semilla">
                 <img class="a" src="../disenio/A.png" alt="a">
             </div>
-
-            
         </div>
+        <!--
+        <div>
+            <img class="floor" src="../disenio/pared2.png" alt="paredBloque">/>
+        </div>-->
         <!--navbar-->
         <nav class="navv">
             <ul class="nav justify-content-center">
@@ -58,41 +60,28 @@
     <main>
         <div class="container">
             <div class="contenidos">
-                <h4 class="subtitulo">1. HTML: Tus primeros pasos - Supera los niveles.</h4>
             </div>
-            <!-- <div class="h4center">
-                <h4 class="nivel1 justify-content-center">ATRAPA LOS "TAGS HTML"</h4>
-                <h5 class="descCont">¡Intenta atrapar las etiquetas que caen desde el cielo!</h5>
-            </div> -->
-            <a href="iniciarSesion.html">
-                <div class="box1 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 1</h6>
-                    </div>
-                </div>
-            </a>
-            <div>
-                <div class="h4center">
-                    <h4 class="nivel2 justify-content-center">ARRASTRA Y SUELTA</h4>
-                </div>
+            <div class="h4center">
+                <h4 class="nivel1 justify-content-center">HTML5</h4>
+                <h5 class="descCont">Explora el comienzo del mundo de programar.</h5>
             </div>
-            <a href="iniciarSesion.html">
-                <div class="box2 container">
-                    <div class="boxNivel container">
-                        <h6 class="nivelFont">NIVEL 2</h6>
+            <a href="modulos.html">
+                <div class="boxContC container">
+                    <div class="boxCont1 container">
+                        <h6 class="nivelFont">Hola mundo</h6>
                     </div>
                 </div>
             </a>
             <div>
                 <div class="h5center">
-                    <h4 class="nivel3 justify-content-center">MÁS NIVELES POR VENIR</h4>
+                    <h4 class="nivel3 justify-content-center">VUELVE MÁS TARDE</h4>
                 </div>
             </div>
-                <div class="box3 container">
-                    <div class="boxSoon container">
-                        <p id="proximamente">Próximamente</p>
-                    </div>
+            <div class="box3 container">
+                <div class="boxSoon container">
+                    <p id="proximamente">Próximamente</p>
                 </div>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
