--- a/Frontend/Frontend/pages/contenidos.html
+++ b/Frontend/Frontend/pages/contenidos.html
@@ -37,7 +37,7 @@
         <nav class="navv">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Nosotros.html"> ¿Quienes somos?</a>
@@ -108,7 +108,6 @@
             <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
             <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
             <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
-            <br> Generation 2022
         </div>
     </footer>
 </body>
