--- a/Frontend/Frontend/pages/iniciarSesion.html
+++ b/Frontend/Frontend/pages/iniciarSesion.html
@@ -26,7 +26,7 @@
         <nav class="navv">
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Nosotros.html"> ¿Quienes somos?</a>
