--- a/Frontend/Frontend/pages/registro.html
+++ b/Frontend/Frontend/pages/registro.html
@@ -37,7 +37,7 @@
         <nav class="navv">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link " aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Nosotros.html"> ¿Quienes somos?</a>
@@ -88,17 +88,17 @@
                                 <br>
                                 <br>
                                 <input id="btn1" type="submit" value="Registrarse">
-                            </div>
-                            <div class="columna2 col text-dark">
-                                <div class="btn-selector">
-                                    <div class="grupobtn btn-group" role="group" aria-label="Basic example">
-                                        <button type="button" class="btn btn-secondary"
-                                            style="font-size: x-small;">Left</button>
-                                        <button type="button" class="btn btn-secondary"
-                                            style="font-size: x-small;">Middle</button>
-                                        <button type="button" class="btn btn-secondary"
-                                            style="font-size: x-small;">Right</button>
-                                    </div>
+                            </a>
+                        </div>
+                        <div class="columna2 col text-dark">
+                            <div class="btn-selector">
+                                <div class="grupobtn btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn btn-secondary"
+                                        style="font-size: x-small;">Alumno</button>
+                                    <!-- <button type="button" class="btn btn-secondary"
+                                        style="font-size: x-small;">Profesor</button> -->
+                                    <button type="button" class="btn btn-secondary"
+                                        style="font-size: x-small;">profesor</button>
                                 </div>
                             </div>
                         </div>
