20220716 UPDATE ALONDRA FRONT END

--- a/FRONTEND/Frontend/pages/contacto.html
+++ b/FRONTEND/Frontend/pages/contacto.html
@@ -68,6 +68,14 @@
                     <br>
                     <br>
                     <span>
+                        Correo:
+                    </span>
+                    <br>
+                    <br>
+                    <input type=”text” size=”19″ name=”ContactName”>
+                    <br>
+                    <br>
+                    <span>
                         Mensaje:
                     </span>
                     <br>
@@ -76,9 +84,7 @@
                     <br>
                     <br>
                     <!--CHECAR PROBLEMA NO RE DIRECCIONA-->
-                    <a href="iniciarSesion.html">
                     <button type=”submit” value=”Submit” id="send"> Enviar</button>
-                    </a>
                 </form>
             </div>
             
