--- a/FRONTEND/Frontend/pages/etapas.html
+++ b/FRONTEND/Frontend/pages/etapas.html
@@ -62,10 +62,10 @@
             <div class="contenidos">
                 <h4 class="subtitulo">1. HTML: Tus primeros pasos - Supera los niveles.</h4>
             </div>
-            <div class="h4center">
+            <!-- <div class="h4center">
                 <h4 class="nivel1 justify-content-center">ATRAPA LOS "TAGS HTML"</h4>
                 <h5 class="descCont">¡Intenta atrapar las etiquetas que caen desde el cielo!</h5>
-            </div>
+            </div> -->
             <a href="iniciarSesion.html">
                 <div class="box1 container">
                     <div class="boxNivel container">
@@ -114,7 +114,6 @@
             <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
             <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
             <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
-            <br> Generation 2022
         </div>
     </footer>
 </body>
