--- a/FRONTEND/Frontend/pages/registro.html
+++ b/FRONTEND/Frontend/pages/registro.html
@@ -61,31 +61,24 @@
             <div class="wrapper">
                 <div class="container1">
                     <div class="tabla1 row">
-                        <div class="columna1 col text-dark" align="center">
-                            <p>Nombres</p>
+                        <div class="columna1 col text-dark " >
+                            
                             <input type="text" name="nombres" id="nombres" placeholder="Ingrese sus nombres">
-                            <br>
-                            <p>Apellidos</p>
+                            <p>Nombres</p> 
                             <input type="text" name="apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
-                            <br>
-                            <p>Edad</p>
+                            <p>Apellidos</p> 
                             <input type="int" name="edad" id="int" placeholder="Ingrese su edad">
-                            <br>
-                            <p>Correo</p>
+                            <p>Edad</p> 
                             <input type="email" name="correo" id="correo" placeholder="Ingrese su correo">
-                            <br>
-                            <p>Nombre de usuario</p>
+                            <p>Correo</p> 
                             <input type="text" name="nombreUsuario" id="nombreUsuario"
-                                placeholder="Ingrese su nombre de usuario">
-                            <br>
-                            <p>Clave</p>
+                            placeholder="Ingrese su nombre de usuario">
+                            <p>Nombre de usuario</p> 
                             <input type="password" name="clave" id="clave" placeholder="Ingrese su clave">
-                            <br>
-                            <p>Reingrese su clave</p>
+                            <p>Clave</p> 
                             <input type="password" name="reingresoClave" id="reingreoClave"
-                                placeholder="Reingrese su clave">
-                            <br>
-                            <br>
+                            placeholder="Reingrese su clave">
+                                <p>Reingrese su clave</p>
                             <!--INYECTADO LINK AL BOTON-->
                             <a href="asignaturas.html">
                                 <input id="btn1" type="submit" value="Registrarse">
@@ -95,11 +88,11 @@
                             <div class="btn-selector">
                                 <div class="grupobtn btn-group" role="group" aria-label="Basic example">
                                     <button type="button" class="btn btn-secondary"
-                                        style="font-size: x-small;">Left</button>
+                                        style="font-size: small;">Alumno</button>
+                                    <!-- <button type="button" class="btn btn-secondary"
+                                        style="font-size: x-small;">Profesor</button> -->
                                     <button type="button" class="btn btn-secondary"
-                                        style="font-size: x-small;">Middle</button>
-                                    <button type="button" class="btn btn-secondary"
-                                        style="font-size: x-small;">Right</button>
+                                        style="font-size: small;">Profesor</button>
                                 </div>
                             </div>
                         </div>
