--- a/FRONTEND/Frontend/pages/iniciarSesion.html
+++ b/FRONTEND/Frontend/pages/iniciarSesion.html
@@ -56,39 +56,40 @@
     <main>
         <div class="container" align="center">
             <div class="row justify-content-center ">
-                <div class="formulario">
-                    <form action="">
-                        <div class="form-group text-center pt-3">
-                            <h3 class="text-light">INICIAR SESIÓN</h3>
-                        </div>
-                        <div class="form-group mx-sm-4 pt-3">
-                            <input type="text" class="form-control" placeholder="Ingrese su Usuario">
-                        </div>
-                        <div class="form-group mx-sm-4 pb-3">
-                            <input type="password" class="form-control" placeholder="Ingrese su Contraseña">
-                        </div>
-                        <!--CHECAR ESTE LINK DE RE DIRECCION-->
-                        <br>
-                        <br>
-                        <div class="form-group mx-sm-4 pb-2">
-                            <span><a href="asignaturas.html" class="olvide1">INGRESAR</a></span>
-                            <!--<input type="submit" class="btn btn-block ingresar" value="INGRESAR">-->
-                        </div>
-                        <br>
-                        <br>
-                        <!-- <div class="form-group mx-sm-4 text-right">
-                            <span class=""><a href="#" class="olvide">Olvide mi contraseña?</a></span>
-                        </div>-->
-                        <div class="form-group text-center">
-                            <span><a href="registro.html" class="olvide1">REGISTRARSE</a></span>
-                        </div>
-                        <br>
-                        <br>
-                    </form>
+                <div class="pared">
+                    <div class="formulario">
+                        <form action="">
+                            <div class="form-group text-center pt-3">
+                                <h3 class="text-light">INICIAR SESIÓN</h3>
+                            </div>
+                            <div class="form-group mx-sm-4 pt-3">
+                                <input type="text" class="form-control" placeholder="Ingrese su Usuario">
+                            </div>
+                            <div class="form-group mx-sm-4 pb-3">
+                                <input type="password" class="form-control" placeholder="Ingrese su Contraseña">
+                            </div>
+                            <!--CHECAR ESTE LINK DE RE DIRECCION-->
+                            <br>
+                            <br>
+                            <div class="form-group mx-sm-4 pb-2">
+                                <span><a href="asignaturas.html" class="olvide1">INGRESAR</a></span>
+                                <!--<input type="submit" class="btn btn-block ingresar" value="INGRESAR">-->
+                            </div>
+                            <br>
+                            <br>
+                            <!-- <div class="form-group mx-sm-4 text-right">
+                                    <span class=""><a href="#" class="olvide">Olvide mi contraseña?</a></span>
+                                </div>-->
+                            <div class="form-group text-center">
+                                <span><a href="registro.html" class="olvide1">REGISTRARSE</a></span>
+                            </div>
+                            <br>
+                            <br>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-
 
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -109,7 +110,6 @@
             <a href="https://www.instagram.com"><img class="img-ig" src="../public/ig.png" alt="ig"></a>
             <a href="https://www.Facebook.com"><img class="img-fb" src="../public/fb.png" alt="fb"></a>
             <a href="https://twitter.com"><img class="img-tw " src="../public/tw.png" alt="tw"></a>
-            <br> Generation 2022
         </div>
     </footer>
 </body>
