--- a/FRONTEND-REACT/semillita/public/index.html
+++ b/FRONTEND-REACT/semillita/public/index.html
@@ -41,7 +41,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <script async src="https://cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-    <title>Hola</title>
+    <title>Semillita</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
